# crank-platform

./: .coverage  .dockerignore  .env  .env.azure  .env.local  .env.production  .env.template  .gitignore  .markdownlint.json  AI_ASSISTANT_ONBOARDING.md  AZURE_SETUP_GUIDE.md  CHANGELOG.md  CODE_REVIEW_RESPONSE.md  Dockerfile  Dockerfile.cpu  ENHANCED_MASCOT_FRAMEWORK.md  ENHANCEMENT_ROADMAP.md  GITOPS_WORKFLOW.md  ISSUE_20_COMPLETION.md  ISSUE_RENAME_IMAGE_CLASSIFIERS.md  LICENSE  MODULARITY_ANALYSIS.md  Makefile  PORT_CONFIGURATION_STRATEGY.md  QUICK_START.md  README.md  README_OLD.md  REPOSITORY_ORGANIZATION.md  REQUIREMENTS.md  WORKER_MIGRATION_COMPLETE.md  WORKER_MIGRATION_PLAN.md  WORKER_SEPARATION_STRATEGY.md  apple_silicon_smoke_test_results.json  confidence-test-report.json  crank-platform-mascots.code-workspace  crank_doc_converter_refactored.py  crank_email_classifier_refactored.py  crank_email_parser_refactored.py  crank_image_classifier_gpu_refactored.py  crank_image_classifier_refactored.py  (+52 more)
.github/: AUTOMATED_ISSUE_CREATION.md  CONTRIBUTING.md  COPYRIGHT_HEADER.md  DEVELOPMENT_WORKFLOW.md  copilot-instructions.md
azure/: adversarial-test.py  australia-regions-analysis.md  deployment-strategy.md
certs/: ca-service.crt  ca-service.key  ca.crt  ca.key  ca.srl
certs-production/: platform.crt  verify-certs.sh
crank_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
deployment/: worker-migration-checklist.yml
docs/: ARCHITECTURE.md  CODE_REVIEW_RESPONSE.md  MTLS_RESILIENCE_STRATEGY.md  PLATFORM_SERVICES.md  README.md  VISION.md  WSL2-GPU-CUDA-COMPATIBILITY.md  anti-fragile-mtls-strategy.md  container-strategy.md  (+14 more)
golden/: .gitignore  HEALTH_REPORT.md  pyproject.toml  requirements.txt
golden/coordination-docs/: INTEGRATION_SUMMARY.md
golden/integration-scripts/: extract-gherkins.py  integrate-zettels.py  test-infrastructure.py
golden/philosophical-analyzer/: __init__.py  cli.py  philosophical_analyzer.py
golden/zettels/: CHAOS-ELIMINATION-SUCCESS.md  MASTER-ZETTEL.md
golden/zettels-old-messy/curated-collection/: 048-289f746f-2671-4b8c-a283-eafd028e8480.md  activation-energy-and-the-chemistry-of-procrastination.md  alignment-reflex-2.md  beyond-kahneman-cognitive-affective-map.md  chimeric-memory-in-human-ai-dialogues.md  cortisol-paradox-in-inattentive-adhd.md  crankbird-brand-science-playbook-chapter-2.md  crankbird-brand-science-playbook-chapter-6.md  crankbird-brand-science-playbook-quickstart-for-teams.md  crankbird-investment-thinking-and-the-value-test-2.md  crankbird-persona-intelligence-revops.md  digital-greenhouse-metaphor.md  disappearing-language-of-design-2.md  entrepreneurs-bias-and-the-discipline-of-killing-darlings-2.md  ethical-teleology-meaningful-attention.md  horizon-3-guided-emergence.md  innovating-fast-and-slow.md  investing-along-tactile-moat-2.md  narrative-threading-contextual-goal-2.md  narrative-threading-contextual-goal.md  pattern-of-contextual-goals.md  pivoting-magic-roundabout-vendor-enable-2.md  revops-as-cognitive-infrastructure-2.md  revops-as-instrumentation-of-brand-science.md  scholar-and-warrior.md  systems-of-result-zettel.md  tactile-moat-electrical-work.md  the-crankbird-declaration.md  zettel-all-the-things-2.md  zettel-schema-as-cognitive-infrastructure-1.md  zettel-title-2.md  zk20251018-003-meaning-implication-shouldness.md  zk20251018-005-stern-benevolence-of-time.md  zk20251018-cosmic-semantics-space-time-being.md
golden/zettels-old-messy/meta-analysis/: zk20251112-014_convergence-analysis.md  zk20251113-001_philosophical-dna-extraction-system.md
golden/zettels-old-messy/personas/: systems-architect-who-questions-abstractions.md  zk20251112-002_upn-systems-architect.md  zk20251112-004_upn-meta-pattern.md  zk20251112-013_persona-recognition-tools.md  zk20251112-015_upn-context-aware-consumer.md
golden/zettels/01-core-philosophy/: 051-f3e0a0d1-f5d7-47ce-a94a-0a17b57ec3ba.md  20251015-effort-value-and-meaning.md  affective-teleology-of-patterns.md  alignment-reflex.md  baumols-cost-disease-and-the-price-of-embodiment-2.md  baumols-cost-disease-and-the-price-of-embodiment.md  choosing-parallel-compute-substrate.md  contextual-goals-orienting-fields-2.md  contextual-goals-teleological-lightness.md  cortisol-paradox-in-inattentive-adhd-2.md  default-mode-network-and-mental-time-travel-2.md  default-mode-network-and-mental-time-travel.md  disappearing-language-of-design.md  hera-model-hemispheric-encoding-retrieval-asymmetry.md  institutional-gas-signal-trading.md  m2m-economies-as-systems-of-result-1.md  magic-roundabouts-as-productised-meaning-systems.md  master_MASTER-ZETTEL_Intelligence-Is-Situated.md  teleology-of-social-sequencing.md  zettel-all-the-things.md  zettel-title.md  zk20251018-001-space-has-meaning.md  zk20251018-007-space-time-being-nonbeing.md  zk20251019-001-morning-ops-protocol.md  zk20251113-003_nature-alignment-detection-stoic-pattern-recognition.md
golden/zettels/02-business-systems/: crankbird-brand-science-playbook-chapter-1-revised-references.md  crankbird-brand-science-playbook-chapter-3.md  crankbird-brand-science-playbook-readable-edition-chapter-4.md  crankbird-investment-thinking-and-the-value-test.md  crankbird-persona-intelligence-revops-3.md  strategy-as-fluid-dynamics.md  the-crankbird-brand-manifesto.md
golden/zettels/03-cognitive-science/: chimeric-memory-in-human-ai-dialogues-2.md  neural-validation-of-tulving-s-dual-memory-model.md  notebook-as-cognitive-medium.md
golden/zettels/04-brand-science/: designing-for-cognitive-integrity-ethical-brand-systems-in-an-ai-ubiquitous-world.md  unified-persona-and-narrative-upn-a-framework-for-continuity-across-product-marketing-and-governance.md
golden/zettels/05-technical-systems/: harmoniser-jtbd-2.md  harmoniser-purpose-design-intent-2.md  harmoniser-user-stories-tests-2.md  zk20251113-004_deslopifier-crank-service-architecture.md
golden/zettels/06-personas/: sonnet_zk20251112-003_upn-field-decision-maker.md  zk20251112-011_upn-identity-fracturer.md
golden/zettels/07-coordination/: COMPLETION.md
(+710 files in other folders)
