[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crank-platform"
version = "0.1.0"
description = "Anti-fragile distributed AI platform with GPU management"
authors = [
    {name = "Crank Platform Team"}
]
requires-python = ">=3.9"
dependencies = [
    # Core framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",

    # HTTP client for service communication
    "httpx>=0.25.0",
    "aiohttp>=3.8.0",

    # File processing
    "python-multipart>=0.0.6",

    # Basic Computer Vision (CPU-friendly)
    "opencv-python>=4.8.0",
    "Pillow>=10.1.0",
    "numpy>=1.25.0",
    "scikit-learn>=1.3.0",

    # Basic image processing
    "webcolors>=1.13",

    # Configuration and utilities
    "PyYAML>=6.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
gpu = [
    # Deep Learning and Computer Vision (GPU-enabled)
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.35.0",
    "ultralytics>=8.0.0",  # YOLOv8/YOLOv9

    # Specialized CV Models
    "openai-clip>=1.0",  # Alternative CLIP implementation
    "sentence-transformers>=2.2.0",

    # Advanced image processing
    "albumentations>=1.3.0",
    "imagehash>=4.3.0",
    "scipy>=1.11.0",

    # GPU monitoring
    "GPUtil>=1.4.0",
]

dev = [
    # Development dependencies
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",

    # Additional testing
    "tqdm>=4.66.0",
]

persistence = [
    # Optional persistence backends
    "redis>=4.5.0",
    "aiosqlite>=0.19.0",
]

all = [
    "crank-platform[gpu,dev,persistence]"
]

[tool.setuptools.packages.find]
where = ["src", "services", "tests"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = [
    "E501",    # Line too long
    "S101",    # Use of assert
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "T201",    # Print statements (allow in tests)
    "S603",    # Subprocess without shell=False
    "S607",    # Starting process with partial path
    "PLR2004", # Magic value comparison
    "TRY003",  # Raise vanilla args
    "EM102",   # F-string in exception
    "EM101",   # Raw string in exception
    "BLE001",  # Blind except
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
