[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crank-platform"
version = "0.1.0"
description = "Anti-fragile distributed AI platform with GPU management"
authors = [
    {name = "Crank Platform Team"}
]
requires-python = ">=3.9"
dependencies = [
    # Core framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    # HTTP client for service communication
    "httpx>=0.25.0",
    "aiohttp>=3.8.0",
    # File processing
    "python-multipart>=0.0.6",
    # Basic Computer Vision (CPU-friendly)
    "opencv-python>=4.8.0",
    "Pillow>=10.1.0",
    "numpy>=1.25.0",
    "scikit-learn>=1.3.0",
    # Basic image processing
    "webcolors>=1.13",
    # Configuration and utilities
    "PyYAML>=6.0.0",
    "psutil>=5.9.0",
    "nltk>=3.9.2",
    "beautifulsoup4>=4.14.2",
]

[project.optional-dependencies]
gpu = [
    # Deep Learning and Computer Vision (GPU-enabled)
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.35.0",
    "ultralytics>=8.0.0",  # YOLOv8/YOLOv9

    # Specialized CV Models
    "openai-clip>=1.0",  # Alternative CLIP implementation
    "sentence-transformers>=2.2.0",

    # Advanced image processing
    "albumentations>=1.3.0",
    "imagehash>=4.3.0",
    "scipy>=1.11.0",

    # GPU monitoring
    "GPUtil>=1.4.0",
]

dev = [
    # Development dependencies
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",

    # Additional testing
    "tqdm>=4.66.0",
]

persistence = [
    # Optional persistence backends
    "redis>=4.5.0",
    "aiosqlite>=0.19.0",
]

all = [
    "crank-platform[gpu,dev,persistence]"
]

[tool.setuptools.packages.find]
where = ["src", "services", "tests"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Keep essential rules as guard rails, not as a type checker
select = ["E","F","I","UP","B","C4","PIE","RUF"]
ignore = [
    "E501",    # Line too long (let black handle it)
    "ANN101",  # Missing type annotation for `self`
    "ANN102",  # Missing type annotation for `cls`
]

[tool.ruff.lint.extend-per-file-ignores]
# Tests can be more relaxed
"**/tests/**" = ["S101", "PLR2004", "ARG001", "ARG002"]

# Services (development/prototype code) - more permissive
"services/**" = [
    "S106",     # Possible hardcoded password
    "S108",     # Probable insecure usage of temp file/directory
    "S603",     # subprocess call: check for execution of untrusted input
    "S607",     # Starting a process with a partial executable path
    "BLE001",   # Do not catch blind exception
    "TRY003",   # Avoid specifying long messages outside exception class
    "EM101",    # Exception must not use a string literal
    "EM102",    # Exception must not use an f-string literal
    "G004",     # Logging statement uses f-string
    "PTH",      # Use pathlib instead of os.path
    "PLR0913",  # Too many arguments to function call
    "PLR2004",  # Magic value used in comparison
    "C901",     # Function is too complex
    "ARG001",   # Unused function argument
    "ARG002",   # Unused method argument
    "S110",     # Try-except-pass detected
    "S104",     # Possible binding to all interfaces
    "S501",     # Probable use of requests call with verify=False
]

# Scripts and tools - very permissive (prototype/utility code)
"scripts/**" = [
    "S", "BLE001", "TRY003", "EM101", "EM102", "G004", "PTH", "PLR", "C901", "ARG"
]
"tools/**" = [
    "S", "BLE001", "TRY003", "EM101", "EM102", "G004", "PTH", "PLR", "C901", "ARG"
]

# Strict for core src (production code)
"src/**" = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Exclude pytest-bdd E2E tests (decorators are genuinely untyped)
# Exclude smoke tests (import untyped legacy code)
exclude = [
    "tests/e2e/.*",
    "tests/quick_validation_test.py",
]

[[tool.mypy.overrides]]
module = "scripts.wendy_security_framework"
disallow_untyped_defs = false
disallow_untyped_calls = false

[dependency-groups]
dev = [
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]
